--- a/StellarFeedback_p3.ipynb
+++ b/StellarFeedback_p3.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 107,
    "id": "c2217491",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 125,
    "id": "af418a50",
    "metadata": {},
    "outputs": [
@@ -184,6 +184,391 @@
    "source": [
     "#ejected, cooled, expelled, accreted = read_all_ejected_expelled()\n",
     "predischarged, discharged, accreted, preheated, heated = read_all_discharged()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "5b7acbb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>pid</th>\n",
+       "      <th>rho</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>coolontime</th>\n",
+       "      <th>r</th>\n",
+       "      <th>r_per_Rvir</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>...</th>\n",
+       "      <th>IGM</th>\n",
+       "      <th>t</th>\n",
+       "      <th>sat_Mvir</th>\n",
+       "      <th>recycleTime</th>\n",
+       "      <th>hot</th>\n",
+       "      <th>key</th>\n",
+       "      <th>t_x</th>\n",
+       "      <th>sat_Mvir_x</th>\n",
+       "      <th>t_y</th>\n",
+       "      <th>sat_Mvir_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>219395</th>\n",
+       "      <td>12.076876</td>\n",
+       "      <td>2202002</td>\n",
+       "      <td>0.131769</td>\n",
+       "      <td>7552.754883</td>\n",
+       "      <td>28840.956689</td>\n",
+       "      <td>10.908183</td>\n",
+       "      <td>0.329223</td>\n",
+       "      <td>0.005613</td>\n",
+       "      <td>0.111963</td>\n",
+       "      <td>-0.214933</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>12.076876</td>\n",
+       "      <td>9.621392e+09</td>\n",
+       "      <td>0.861961</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>h148_13</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176391</th>\n",
+       "      <td>10.783935</td>\n",
+       "      <td>4073949</td>\n",
+       "      <td>0.332782</td>\n",
+       "      <td>2948.533447</td>\n",
+       "      <td>26839.452610</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.687113</td>\n",
+       "      <td>0.012759</td>\n",
+       "      <td>-0.619439</td>\n",
+       "      <td>-0.231153</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>10.783935</td>\n",
+       "      <td>1.001308e+10</td>\n",
+       "      <td>0.016835</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>h148_13</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176395</th>\n",
+       "      <td>10.783935</td>\n",
+       "      <td>4340176</td>\n",
+       "      <td>0.401898</td>\n",
+       "      <td>2652.002686</td>\n",
+       "      <td>27086.295834</td>\n",
+       "      <td>10.685118</td>\n",
+       "      <td>0.428320</td>\n",
+       "      <td>0.007953</td>\n",
+       "      <td>-0.178513</td>\n",
+       "      <td>-0.216064</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>10.783935</td>\n",
+       "      <td>1.001308e+10</td>\n",
+       "      <td>0.016835</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>h148_13</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>233228</th>\n",
+       "      <td>12.150951</td>\n",
+       "      <td>6936050</td>\n",
+       "      <td>0.560197</td>\n",
+       "      <td>1397.095459</td>\n",
+       "      <td>27697.543286</td>\n",
+       "      <td>11.744889</td>\n",
+       "      <td>0.390005</td>\n",
+       "      <td>0.006615</td>\n",
+       "      <td>-0.208407</td>\n",
+       "      <td>-0.174504</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>12.150951</td>\n",
+       "      <td>9.613553e+09</td>\n",
+       "      <td>1.797996</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>h148_13</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>246998</th>\n",
+       "      <td>12.507856</td>\n",
+       "      <td>6988228</td>\n",
+       "      <td>0.265469</td>\n",
+       "      <td>2674.128662</td>\n",
+       "      <td>26987.662856</td>\n",
+       "      <td>11.038656</td>\n",
+       "      <td>0.556688</td>\n",
+       "      <td>0.009209</td>\n",
+       "      <td>-0.346464</td>\n",
+       "      <td>-0.008945</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>12.507856</td>\n",
+       "      <td>9.585598e+09</td>\n",
+       "      <td>1.292941</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>h148_13</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30570</th>\n",
+       "      <td>8.736778</td>\n",
+       "      <td>6627712</td>\n",
+       "      <td>0.526319</td>\n",
+       "      <td>9594.726562</td>\n",
+       "      <td>26645.238280</td>\n",
+       "      <td>4.748210</td>\n",
+       "      <td>0.342840</td>\n",
+       "      <td>0.023339</td>\n",
+       "      <td>0.061558</td>\n",
+       "      <td>-0.196127</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.127947</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>h329_33</td>\n",
+       "      <td>8.736778</td>\n",
+       "      <td>1.858121e+09</td>\n",
+       "      <td>8.736778</td>\n",
+       "      <td>1.858121e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26201</th>\n",
+       "      <td>8.608831</td>\n",
+       "      <td>6627722</td>\n",
+       "      <td>0.138480</td>\n",
+       "      <td>10518.361328</td>\n",
+       "      <td>26602.553508</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.303652</td>\n",
+       "      <td>0.026359</td>\n",
+       "      <td>-0.213029</td>\n",
+       "      <td>0.208620</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.518523</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>h329_33</td>\n",
+       "      <td>8.608831</td>\n",
+       "      <td>1.604989e+09</td>\n",
+       "      <td>8.608831</td>\n",
+       "      <td>1.604989e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13091</th>\n",
+       "      <td>7.767072</td>\n",
+       "      <td>6627756</td>\n",
+       "      <td>0.115487</td>\n",
+       "      <td>11003.851562</td>\n",
+       "      <td>26526.509817</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.576517</td>\n",
+       "      <td>0.020367</td>\n",
+       "      <td>0.452256</td>\n",
+       "      <td>0.322808</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.323235</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>h329_33</td>\n",
+       "      <td>7.767072</td>\n",
+       "      <td>3.202585e+09</td>\n",
+       "      <td>7.767072</td>\n",
+       "      <td>3.202585e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30580</th>\n",
+       "      <td>8.736778</td>\n",
+       "      <td>6627757</td>\n",
+       "      <td>0.106789</td>\n",
+       "      <td>10646.407227</td>\n",
+       "      <td>26584.817118</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.666577</td>\n",
+       "      <td>0.249600</td>\n",
+       "      <td>-0.559055</td>\n",
+       "      <td>-0.269244</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.323235</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>h329_33</td>\n",
+       "      <td>8.736778</td>\n",
+       "      <td>1.858121e+09</td>\n",
+       "      <td>8.736778</td>\n",
+       "      <td>1.858121e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30593</th>\n",
+       "      <td>8.736778</td>\n",
+       "      <td>6630131</td>\n",
+       "      <td>0.115406</td>\n",
+       "      <td>10597.738281</td>\n",
+       "      <td>26557.970752</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.622564</td>\n",
+       "      <td>0.246604</td>\n",
+       "      <td>-0.620991</td>\n",
+       "      <td>-0.292862</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.969706</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>h329_33</td>\n",
+       "      <td>8.736778</td>\n",
+       "      <td>1.858121e+09</td>\n",
+       "      <td>8.736778</td>\n",
+       "      <td>1.858121e+09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>116578 rows × 69 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             time      pid       rho          temp          mass  coolontime  \\\n",
+       "219395  12.076876  2202002  0.131769   7552.754883  28840.956689   10.908183   \n",
+       "176391  10.783935  4073949  0.332782   2948.533447  26839.452610    0.000000   \n",
+       "176395  10.783935  4340176  0.401898   2652.002686  27086.295834   10.685118   \n",
+       "233228  12.150951  6936050  0.560197   1397.095459  27697.543286   11.744889   \n",
+       "246998  12.507856  6988228  0.265469   2674.128662  26987.662856   11.038656   \n",
+       "...           ...      ...       ...           ...           ...         ...   \n",
+       "30570    8.736778  6627712  0.526319   9594.726562  26645.238280    4.748210   \n",
+       "26201    8.608831  6627722  0.138480  10518.361328  26602.553508    0.000000   \n",
+       "13091    7.767072  6627756  0.115487  11003.851562  26526.509817    0.000000   \n",
+       "30580    8.736778  6627757  0.106789  10646.407227  26584.817118    0.000000   \n",
+       "30593    8.736778  6630131  0.115406  10597.738281  26557.970752    0.000000   \n",
+       "\n",
+       "               r  r_per_Rvir         x         y  ...    IGM          t  \\\n",
+       "219395  0.329223    0.005613  0.111963 -0.214933  ...  False  12.076876   \n",
+       "176391  0.687113    0.012759 -0.619439 -0.231153  ...  False  10.783935   \n",
+       "176395  0.428320    0.007953 -0.178513 -0.216064  ...  False  10.783935   \n",
+       "233228  0.390005    0.006615 -0.208407 -0.174504  ...  False  12.150951   \n",
+       "246998  0.556688    0.009209 -0.346464 -0.008945  ...  False  12.507856   \n",
+       "...          ...         ...       ...       ...  ...    ...        ...   \n",
+       "30570   0.342840    0.023339  0.061558 -0.196127  ...  False        NaN   \n",
+       "26201   0.303652    0.026359 -0.213029  0.208620  ...  False        NaN   \n",
+       "13091   0.576517    0.020367  0.452256  0.322808  ...  False        NaN   \n",
+       "30580   3.666577    0.249600 -0.559055 -0.269244  ...  False        NaN   \n",
+       "30593   3.622564    0.246604 -0.620991 -0.292862  ...  False        NaN   \n",
+       "\n",
+       "            sat_Mvir  recycleTime  hot      key       t_x    sat_Mvir_x  \\\n",
+       "219395  9.621392e+09     0.861961  NaN  h148_13       NaN           NaN   \n",
+       "176391  1.001308e+10     0.016835  NaN  h148_13       NaN           NaN   \n",
+       "176395  1.001308e+10     0.016835  NaN  h148_13       NaN           NaN   \n",
+       "233228  9.613553e+09     1.797996  NaN  h148_13       NaN           NaN   \n",
+       "246998  9.585598e+09     1.292941  NaN  h148_13       NaN           NaN   \n",
+       "...              ...          ...  ...      ...       ...           ...   \n",
+       "30570            NaN     0.127947  NaN  h329_33  8.736778  1.858121e+09   \n",
+       "26201            NaN     0.518523  NaN  h329_33  8.608831  1.604989e+09   \n",
+       "13091            NaN     0.323235  NaN  h329_33  7.767072  3.202585e+09   \n",
+       "30580            NaN     0.323235  NaN  h329_33  8.736778  1.858121e+09   \n",
+       "30593            NaN     0.969706  NaN  h329_33  8.736778  1.858121e+09   \n",
+       "\n",
+       "             t_y    sat_Mvir_y  \n",
+       "219395       NaN           NaN  \n",
+       "176391       NaN           NaN  \n",
+       "176395       NaN           NaN  \n",
+       "233228       NaN           NaN  \n",
+       "246998       NaN           NaN  \n",
+       "...          ...           ...  \n",
+       "30570   8.736778  1.858121e+09  \n",
+       "26201   8.608831  1.604989e+09  \n",
+       "13091   7.767072  3.202585e+09  \n",
+       "30580   8.736778  1.858121e+09  \n",
+       "30593   8.736778  1.858121e+09  \n",
+       "\n",
+       "[116578 rows x 69 columns]"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accreted"
    ]
   },
   {
@@ -1054,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "fdc6ea91",
+   "id": "83eb4ed0",
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8df14aad",
+   "id": "6c8cfabf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1147,7 +1532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a174be3",
+   "id": "33987fc2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1155,14 +1540,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbeed51b",
+   "id": "1abaa906",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "8cccd36e",
+   "id": "6d27a5ec",
    "metadata": {},
    "source": [
     "### Velocity Relations <a class=\"anchor\" id=\"vel\"></a>\n",
@@ -1173,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f6c8c3e",
+   "id": "0ed755c7",
    "metadata": {},
    "outputs": [],
    "source": []
