--- a/StellarFeedback_p3.ipynb
+++ b/StellarFeedback_p3.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Gas Discharge & Stellar Feedback-driven Outflows (Part 3 /3):\n",
     "## Ram Pressure, Accretion Times, Distributions\n",
-    "`-- Leo Lonzarich, 17 November 2021 // [Updated 30-11-21] --`\n",
+    "`-- Leo Lonzarich, 17 November 2021 // [Updated 31-11-21] --`\n",
     "\n",
     "\n",
     "### Table of Contents\n",
@@ -17,6 +17,7 @@
     "- [Accretion Times](#acctime)\n",
     "    - [General Accretion Times](#gen)\n",
     "    - [Supernova Heating](#sne)\n",
+    "    - [Distance Distributions](#dis)\n",
     "    - [Velocity Distributions](#vel)\n",
     "\n",
     "\n",
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "id": "c2217491",
    "metadata": {},
    "outputs": [],
@@ -92,7 +93,8 @@
     "    keys = np.array([h[1:] for h in hdf.keys()])\n",
     "\n",
     "# listing dwarf galaxies of simulations that are viable for study (gaseous, satellite, etc).\n",
-    "print(len(keys), 'Available Keys:', *keys)"
+    "print(len(keys), 'Available Keys:', *keys)\n",
+    "#Initiate MLG protocol: Edition LL ZeroTsu!NAnIIIII!!!!2D Waifu Powers.ex file load!!!"
    ]
   },
   {
@@ -189,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "5b7acbb1",
+   "id": "d9874896",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1441,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "83eb4ed0",
+   "id": "89ff833f",
    "metadata": {},
    "outputs": [
     {
@@ -1523,31 +1525,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6c8cfabf",
+   "execution_count": 3,
+   "id": "e7910ae8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> Returning (predischarged, discharged, adv. accreted, preheated, heated) <\n"
+     ]
+    }
+   ],
+   "source": [
+    "predischarged, discharged, accreted, preheated, heated = read_all_discharged()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "81f4b6a2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# creating weight attributes for plotting.\n",
+    "predischarged['weight'] = predischarged['mass'] / predischarged['mass'].sum()\n",
+    "discharged['weight'] = discharged['mass'] / discharged['mass'].sum()\n",
+    "accreted['weight'] = accreted['mass'] / accreted['mass'].sum()\n",
+    "preheated['weight'] = preheated['mass'] / preheated['mass'].sum()\n",
+    "heated['weight'] = heated['mass'] / heated['mass'].sum()\n",
+    "\n",
+    "# data has precalculated key 'r_per_Rvir' that we will use for our position computations; we unpack it here.\n",
+    "pre_rR = predischarged.r_per_Rvir\n",
+    "all_rR = discharged.r_per_Rvir\n",
+    "acc_rR = accreted.r_per_Rvir\n",
+    "preheat_rR = preheated.r_per_Rvir\n",
+    "hot_rR = heated.r_per_Rvir"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33987fc2",
+   "id": "92ececa6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##### plotting radial positions against time to infall #####\n",
+    "bins = 75\n",
+    "fig, ax = plt.subplots(1,1,dpi=150, figsize=(3.5,2.5), constrained_layout=True) # change to dpi=300 for printout.\n",
+    "\n",
+    "\n",
+    "# sne-heated pre-discharge.\n",
+    "y1, x = np.histogram(preheat_rR, bins=bins, weights=preheated.weight, range=(0, 0.5))\n",
+    "bincenters = 0.5*(x[1:] + x[:-1])\n",
+    "ax.plot(bincenters, y1, label='Preheated', c='darkred')\n",
+    "\n",
+    "# sne-heated discharge.\n",
+    "y1_hot, x = np.histogram(hot_rR, bins=bins, weights=heated.weight, range=(0, 0.5))\n",
+    "bincenters = 0.5*(x[1:] + x[:-1])\n",
+    "ax.plot(bincenters, y1_hot, label='Heated', c='r')\n",
+    "\n",
+    "\n",
+    "# labels, axis scaling, etc.\n",
+    "ax.legend(frameon=False, fontsize='8')\n",
+    "\n",
+    "ax.set_title('Radial Positions of Hot Pre-discharge and Hot Discharged Gas', fontsize='medium')\n",
+    "ax.set_xlabel(r'$r/R_{vir}$')\n",
+    "ax.set_ylabel('Fraction Discharged Mass')\n",
+    "# ax.set_xlim(0,0.2)\n",
+    "# ax.set_ylim(0,0.25)\n",
+    "\n",
+    "ax.xaxis.set_minor_locator(mpl.ticker.MultipleLocator(0.05))\n",
+    "ax.yaxis.set_minor_locator(mpl.ticker.MultipleLocator(0.01))\n",
+    "\n",
+    "ax.ticklabel_format(axis=\"y\", style=\"plain\",scilimits=(0,0))\n",
+    "ax.tick_params(direction='in',which='both',right=True,top=True)\n",
+    "ax.grid(alpha=0.4, zorder=-1000)\n",
+    "\n",
+    "# plt.savefig('plots/theta_allsats_stacked.pdf')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1abaa906",
+   "id": "bc204221",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "6d27a5ec",
+   "id": "a404b127",
+   "metadata": {},
+   "source": [
+    "### Distance Relations <a class=\"anchor\" id=\"dis\"></a>\n",
+    "\n",
+    "Looking at relationships between distance discharged from satellite disk and time taken for accretion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc911855",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8677f22c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0394634d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ea7100d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2817749",
    "metadata": {},
    "source": [
     "### Velocity Relations <a class=\"anchor\" id=\"vel\"></a>\n",
@@ -1558,7 +1669,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ed755c7",
+   "id": "c0f69e82",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1619acd9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dce4f63",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1572,6 +1699,14 @@
     "\n",
     "Testing out different data types and computations."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66298fb7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
