--- a/trackedparticles_chk2.ipynb
+++ b/trackedparticles_chk2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "3e4fadd9",
    "metadata": {},
    "outputs": [],
@@ -24,13 +24,13 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "from compiler_test import *\n",
+    "from compiler import *\n",
     "from analysis import * "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 5,
    "id": "9baced35",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,392 @@
     }
    ],
    "source": [
-    "predischarged, discharged, reaccreted, preheated, heated = read_all_discharged()"
+    "predischarged, discharged, preheated, heated = read_all_discharged()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e5b68d2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>pid</th>\n",
+       "      <th>rho</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>coolontime</th>\n",
+       "      <th>r</th>\n",
+       "      <th>r_per_Rvir</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>...</th>\n",
+       "      <th>r_gal</th>\n",
+       "      <th>host_r_gal</th>\n",
+       "      <th>sat_disk</th>\n",
+       "      <th>sat_halo</th>\n",
+       "      <th>host_disk</th>\n",
+       "      <th>host_halo</th>\n",
+       "      <th>other_sat</th>\n",
+       "      <th>IGM</th>\n",
+       "      <th>angle</th>\n",
+       "      <th>key</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10.783935</td>\n",
+       "      <td>2202002</td>\n",
+       "      <td>0.142927</td>\n",
+       "      <td>8746.030273</td>\n",
+       "      <td>28038.187315</td>\n",
+       "      <td>1.502397</td>\n",
+       "      <td>0.601453</td>\n",
+       "      <td>0.011168</td>\n",
+       "      <td>-0.119313</td>\n",
+       "      <td>-0.324524</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.703272</td>\n",
+       "      <td>18.586025</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>45.412102</td>\n",
+       "      <td>h148_13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12.150951</td>\n",
+       "      <td>2202002</td>\n",
+       "      <td>1.042272</td>\n",
+       "      <td>572.847290</td>\n",
+       "      <td>28866.172758</td>\n",
+       "      <td>10.908183</td>\n",
+       "      <td>0.377233</td>\n",
+       "      <td>0.006398</td>\n",
+       "      <td>-0.349723</td>\n",
+       "      <td>-0.028841</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.803584</td>\n",
+       "      <td>20.529471</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>66.323387</td>\n",
+       "      <td>h148_13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9.490994</td>\n",
+       "      <td>2857672</td>\n",
+       "      <td>0.202660</td>\n",
+       "      <td>8618.943359</td>\n",
+       "      <td>26872.972141</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.563845</td>\n",
+       "      <td>0.020154</td>\n",
+       "      <td>-0.466907</td>\n",
+       "      <td>0.092943</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.781953</td>\n",
+       "      <td>18.539079</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>34.061274</td>\n",
+       "      <td>h148_13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10.783935</td>\n",
+       "      <td>4073949</td>\n",
+       "      <td>0.332782</td>\n",
+       "      <td>2948.533447</td>\n",
+       "      <td>26839.452610</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.687113</td>\n",
+       "      <td>0.012759</td>\n",
+       "      <td>-0.619439</td>\n",
+       "      <td>-0.231153</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.703272</td>\n",
+       "      <td>18.586025</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>59.700159</td>\n",
+       "      <td>h148_13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8.608831</td>\n",
+       "      <td>4184960</td>\n",
+       "      <td>0.598633</td>\n",
+       "      <td>7907.567871</td>\n",
+       "      <td>26699.713347</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.458687</td>\n",
+       "      <td>0.011724</td>\n",
+       "      <td>-0.232469</td>\n",
+       "      <td>-0.390336</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.800032</td>\n",
+       "      <td>19.989633</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>29.757641</td>\n",
+       "      <td>h148_13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4335</th>\n",
+       "      <td>7.443837</td>\n",
+       "      <td>6627703</td>\n",
+       "      <td>1.696092</td>\n",
+       "      <td>9155.057617</td>\n",
+       "      <td>27141.207834</td>\n",
+       "      <td>4.465576</td>\n",
+       "      <td>0.279633</td>\n",
+       "      <td>0.010272</td>\n",
+       "      <td>-0.126257</td>\n",
+       "      <td>-0.238210</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.461759</td>\n",
+       "      <td>12.407557</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>121.882278</td>\n",
+       "      <td>h329_33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4342</th>\n",
+       "      <td>7.767072</td>\n",
+       "      <td>6627723</td>\n",
+       "      <td>0.129268</td>\n",
+       "      <td>10936.339844</td>\n",
+       "      <td>26510.714586</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.799649</td>\n",
+       "      <td>0.028250</td>\n",
+       "      <td>-0.283866</td>\n",
+       "      <td>-0.123945</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.538882</td>\n",
+       "      <td>12.023541</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>153.354074</td>\n",
+       "      <td>h329_33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4345</th>\n",
+       "      <td>7.120602</td>\n",
+       "      <td>6627729</td>\n",
+       "      <td>1.372356</td>\n",
+       "      <td>9361.590820</td>\n",
+       "      <td>26796.852462</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.284231</td>\n",
+       "      <td>0.010845</td>\n",
+       "      <td>-0.149474</td>\n",
+       "      <td>0.197935</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.458448</td>\n",
+       "      <td>12.816652</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>54.459202</td>\n",
+       "      <td>h329_33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4358</th>\n",
+       "      <td>8.090307</td>\n",
+       "      <td>6630126</td>\n",
+       "      <td>0.315700</td>\n",
+       "      <td>10079.164062</td>\n",
+       "      <td>26695.281840</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.406475</td>\n",
+       "      <td>0.013873</td>\n",
+       "      <td>-0.381672</td>\n",
+       "      <td>0.139252</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.384223</td>\n",
+       "      <td>11.540393</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>83.842541</td>\n",
+       "      <td>h329_33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4368</th>\n",
+       "      <td>7.767072</td>\n",
+       "      <td>6630196</td>\n",
+       "      <td>15.163758</td>\n",
+       "      <td>4397.125977</td>\n",
+       "      <td>26513.325825</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.168881</td>\n",
+       "      <td>0.005966</td>\n",
+       "      <td>-0.055559</td>\n",
+       "      <td>-0.062482</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.538882</td>\n",
+       "      <td>12.023541</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>77.341376</td>\n",
+       "      <td>h329_33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>77392 rows × 62 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           time      pid        rho          temp          mass  coolontime  \\\n",
+       "0     10.783935  2202002   0.142927   8746.030273  28038.187315    1.502397   \n",
+       "0     12.150951  2202002   1.042272    572.847290  28866.172758   10.908183   \n",
+       "2      9.490994  2857672   0.202660   8618.943359  26872.972141    0.000000   \n",
+       "4     10.783935  4073949   0.332782   2948.533447  26839.452610    0.000000   \n",
+       "7      8.608831  4184960   0.598633   7907.567871  26699.713347    0.000000   \n",
+       "...         ...      ...        ...           ...           ...         ...   \n",
+       "4335   7.443837  6627703   1.696092   9155.057617  27141.207834    4.465576   \n",
+       "4342   7.767072  6627723   0.129268  10936.339844  26510.714586    0.000000   \n",
+       "4345   7.120602  6627729   1.372356   9361.590820  26796.852462    0.000000   \n",
+       "4358   8.090307  6630126   0.315700  10079.164062  26695.281840    0.000000   \n",
+       "4368   7.767072  6630196  15.163758   4397.125977  26513.325825    0.000000   \n",
+       "\n",
+       "             r  r_per_Rvir         x         y  ...     r_gal  host_r_gal  \\\n",
+       "0     0.601453    0.011168 -0.119313 -0.324524  ...  0.703272   18.586025   \n",
+       "0     0.377233    0.006398 -0.349723 -0.028841  ...  0.803584   20.529471   \n",
+       "2     0.563845    0.020154 -0.466907  0.092943  ...  0.781953   18.539079   \n",
+       "4     0.687113    0.012759 -0.619439 -0.231153  ...  0.703272   18.586025   \n",
+       "7     0.458687    0.011724 -0.232469 -0.390336  ...  0.800032   19.989633   \n",
+       "...        ...         ...       ...       ...  ...       ...         ...   \n",
+       "4335  0.279633    0.010272 -0.126257 -0.238210  ...  0.461759   12.407557   \n",
+       "4342  0.799649    0.028250 -0.283866 -0.123945  ...  0.538882   12.023541   \n",
+       "4345  0.284231    0.010845 -0.149474  0.197935  ...  0.458448   12.816652   \n",
+       "4358  0.406475    0.013873 -0.381672  0.139252  ...  0.384223   11.540393   \n",
+       "4368  0.168881    0.005966 -0.055559 -0.062482  ...  0.538882   12.023541   \n",
+       "\n",
+       "      sat_disk  sat_halo  host_disk  host_halo  other_sat    IGM       angle  \\\n",
+       "0         True     False      False      False      False  False   45.412102   \n",
+       "0         True     False      False      False      False  False   66.323387   \n",
+       "2         True     False      False      False      False  False   34.061274   \n",
+       "4         True     False      False      False      False  False   59.700159   \n",
+       "7         True     False      False      False      False  False   29.757641   \n",
+       "...        ...       ...        ...        ...        ...    ...         ...   \n",
+       "4335      True     False      False      False      False  False  121.882278   \n",
+       "4342      True     False      False      False      False  False  153.354074   \n",
+       "4345      True     False      False      False      False  False   54.459202   \n",
+       "4358      True     False      False      False      False  False   83.842541   \n",
+       "4368      True     False      False      False      False  False   77.341376   \n",
+       "\n",
+       "          key  \n",
+       "0     h148_13  \n",
+       "0     h148_13  \n",
+       "2     h148_13  \n",
+       "4     h148_13  \n",
+       "7     h148_13  \n",
+       "...       ...  \n",
+       "4335  h329_33  \n",
+       "4342  h329_33  \n",
+       "4345  h329_33  \n",
+       "4358  h329_33  \n",
+       "4368  h329_33  \n",
+       "\n",
+       "[77392 rows x 62 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preheated"
    ]
   },
   {
