--- a/trackedparticles_chk2.ipynb
+++ b/trackedparticles_chk2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "3e4fadd9",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "9baced35",
    "metadata": {},
    "outputs": [
@@ -48,8 +48,395 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "57d42144",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>pid</th>\n",
+       "      <th>rho</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>coolontime</th>\n",
+       "      <th>r</th>\n",
+       "      <th>r_per_Rvir</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>...</th>\n",
+       "      <th>sat_disk</th>\n",
+       "      <th>sat_halo</th>\n",
+       "      <th>host_disk</th>\n",
+       "      <th>host_halo</th>\n",
+       "      <th>other_sat</th>\n",
+       "      <th>IGM</th>\n",
+       "      <th>sat_Mvir</th>\n",
+       "      <th>angle</th>\n",
+       "      <th>sneHeated</th>\n",
+       "      <th>key</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>190920</th>\n",
+       "      <td>11.214915</td>\n",
+       "      <td>2202002</td>\n",
+       "      <td>0.000120</td>\n",
+       "      <td>53035.859375</td>\n",
+       "      <td>28366.376150</td>\n",
+       "      <td>10.908183</td>\n",
+       "      <td>6.698204</td>\n",
+       "      <td>0.121201</td>\n",
+       "      <td>0.612335</td>\n",
+       "      <td>-0.205156</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>9.786175e+09</td>\n",
+       "      <td>134.055296</td>\n",
+       "      <td>True</td>\n",
+       "      <td>h148_13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>246974</th>\n",
+       "      <td>12.507856</td>\n",
+       "      <td>2202002</td>\n",
+       "      <td>0.000027</td>\n",
+       "      <td>16609.818359</td>\n",
+       "      <td>29001.936444</td>\n",
+       "      <td>12.388833</td>\n",
+       "      <td>8.954684</td>\n",
+       "      <td>0.148129</td>\n",
+       "      <td>8.203483</td>\n",
+       "      <td>-3.552072</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>9.585598e+09</td>\n",
+       "      <td>46.365776</td>\n",
+       "      <td>True</td>\n",
+       "      <td>h148_13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132506</th>\n",
+       "      <td>9.921974</td>\n",
+       "      <td>2857672</td>\n",
+       "      <td>0.000126</td>\n",
+       "      <td>58067.246094</td>\n",
+       "      <td>27134.726367</td>\n",
+       "      <td>9.669960</td>\n",
+       "      <td>7.982986</td>\n",
+       "      <td>0.155638</td>\n",
+       "      <td>-0.130506</td>\n",
+       "      <td>7.981885</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.066215e+10</td>\n",
+       "      <td>95.014185</td>\n",
+       "      <td>True</td>\n",
+       "      <td>h148_13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161854</th>\n",
+       "      <td>10.767100</td>\n",
+       "      <td>4073949</td>\n",
+       "      <td>0.058975</td>\n",
+       "      <td>9752.045898</td>\n",
+       "      <td>26835.758536</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.849211</td>\n",
+       "      <td>0.015786</td>\n",
+       "      <td>-0.681446</td>\n",
+       "      <td>-0.438338</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.002284e+10</td>\n",
+       "      <td>12.792650</td>\n",
+       "      <td>False</td>\n",
+       "      <td>h148_13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190924</th>\n",
+       "      <td>11.214915</td>\n",
+       "      <td>4073949</td>\n",
+       "      <td>0.000031</td>\n",
+       "      <td>54464.347656</td>\n",
+       "      <td>26965.973341</td>\n",
+       "      <td>11.058858</td>\n",
+       "      <td>11.656469</td>\n",
+       "      <td>0.210918</td>\n",
+       "      <td>-5.592503</td>\n",
+       "      <td>8.339077</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>9.786175e+09</td>\n",
+       "      <td>53.294073</td>\n",
+       "      <td>True</td>\n",
+       "      <td>h148_13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39323</th>\n",
+       "      <td>9.383249</td>\n",
+       "      <td>6628979</td>\n",
+       "      <td>0.001709</td>\n",
+       "      <td>21003.914062</td>\n",
+       "      <td>26610.570287</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.218914</td>\n",
+       "      <td>0.078645</td>\n",
+       "      <td>-1.036233</td>\n",
+       "      <td>-1.802731</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2.031549e+09</td>\n",
+       "      <td>55.149343</td>\n",
+       "      <td>False</td>\n",
+       "      <td>h329_33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21846</th>\n",
+       "      <td>8.413543</td>\n",
+       "      <td>6630126</td>\n",
+       "      <td>0.063785</td>\n",
+       "      <td>11265.299805</td>\n",
+       "      <td>26755.941329</td>\n",
+       "      <td>8.272644</td>\n",
+       "      <td>0.819111</td>\n",
+       "      <td>0.027533</td>\n",
+       "      <td>-0.748168</td>\n",
+       "      <td>-0.128032</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3.091517e+09</td>\n",
+       "      <td>53.793614</td>\n",
+       "      <td>True</td>\n",
+       "      <td>h329_33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13105</th>\n",
+       "      <td>7.767072</td>\n",
+       "      <td>6630131</td>\n",
+       "      <td>0.073664</td>\n",
+       "      <td>11408.226562</td>\n",
+       "      <td>26557.801505</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.238168</td>\n",
+       "      <td>0.043742</td>\n",
+       "      <td>-0.672080</td>\n",
+       "      <td>-1.000479</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3.202585e+09</td>\n",
+       "      <td>135.597690</td>\n",
+       "      <td>False</td>\n",
+       "      <td>h329_33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34964</th>\n",
+       "      <td>9.060013</td>\n",
+       "      <td>6630131</td>\n",
+       "      <td>0.001204</td>\n",
+       "      <td>23144.421875</td>\n",
+       "      <td>26557.970752</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>9.890922</td>\n",
+       "      <td>0.359088</td>\n",
+       "      <td>5.622277</td>\n",
+       "      <td>-2.603158</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2.054089e+09</td>\n",
+       "      <td>52.192600</td>\n",
+       "      <td>False</td>\n",
+       "      <td>h329_33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17484</th>\n",
+       "      <td>8.090307</td>\n",
+       "      <td>6630196</td>\n",
+       "      <td>0.079972</td>\n",
+       "      <td>11086.723633</td>\n",
+       "      <td>26645.695937</td>\n",
+       "      <td>7.904796</td>\n",
+       "      <td>0.840242</td>\n",
+       "      <td>0.028677</td>\n",
+       "      <td>0.797118</td>\n",
+       "      <td>-0.087680</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3.232682e+09</td>\n",
+       "      <td>133.845505</td>\n",
+       "      <td>True</td>\n",
+       "      <td>h329_33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>244156 rows × 64 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             time      pid       rho          temp          mass  coolontime  \\\n",
+       "190920  11.214915  2202002  0.000120  53035.859375  28366.376150   10.908183   \n",
+       "246974  12.507856  2202002  0.000027  16609.818359  29001.936444   12.388833   \n",
+       "132506   9.921974  2857672  0.000126  58067.246094  27134.726367    9.669960   \n",
+       "161854  10.767100  4073949  0.058975   9752.045898  26835.758536    0.000000   \n",
+       "190924  11.214915  4073949  0.000031  54464.347656  26965.973341   11.058858   \n",
+       "...           ...      ...       ...           ...           ...         ...   \n",
+       "39323    9.383249  6628979  0.001709  21003.914062  26610.570287    0.000000   \n",
+       "21846    8.413543  6630126  0.063785  11265.299805  26755.941329    8.272644   \n",
+       "13105    7.767072  6630131  0.073664  11408.226562  26557.801505    0.000000   \n",
+       "34964    9.060013  6630131  0.001204  23144.421875  26557.970752    0.000000   \n",
+       "17484    8.090307  6630196  0.079972  11086.723633  26645.695937    7.904796   \n",
+       "\n",
+       "                r  r_per_Rvir         x         y  ...  sat_disk  sat_halo  \\\n",
+       "190920   6.698204    0.121201  0.612335 -0.205156  ...     False      True   \n",
+       "246974   8.954684    0.148129  8.203483 -3.552072  ...     False      True   \n",
+       "132506   7.982986    0.155638 -0.130506  7.981885  ...     False      True   \n",
+       "161854   0.849211    0.015786 -0.681446 -0.438338  ...     False      True   \n",
+       "190924  11.656469    0.210918 -5.592503  8.339077  ...     False      True   \n",
+       "...           ...         ...       ...       ...  ...       ...       ...   \n",
+       "39323    2.218914    0.078645 -1.036233 -1.802731  ...     False      True   \n",
+       "21846    0.819111    0.027533 -0.748168 -0.128032  ...     False      True   \n",
+       "13105    1.238168    0.043742 -0.672080 -1.000479  ...     False      True   \n",
+       "34964    9.890922    0.359088  5.622277 -2.603158  ...     False      True   \n",
+       "17484    0.840242    0.028677  0.797118 -0.087680  ...     False      True   \n",
+       "\n",
+       "        host_disk  host_halo  other_sat    IGM      sat_Mvir       angle  \\\n",
+       "190920      False      False      False  False  9.786175e+09  134.055296   \n",
+       "246974      False      False      False  False  9.585598e+09   46.365776   \n",
+       "132506      False      False      False  False  1.066215e+10   95.014185   \n",
+       "161854      False      False      False  False  1.002284e+10   12.792650   \n",
+       "190924      False      False      False  False  9.786175e+09   53.294073   \n",
+       "...           ...        ...        ...    ...           ...         ...   \n",
+       "39323       False      False      False  False  2.031549e+09   55.149343   \n",
+       "21846       False      False      False  False  3.091517e+09   53.793614   \n",
+       "13105       False      False      False  False  3.202585e+09  135.597690   \n",
+       "34964       False      False      False  False  2.054089e+09   52.192600   \n",
+       "17484       False      False      False  False  3.232682e+09  133.845505   \n",
+       "\n",
+       "        sneHeated      key  \n",
+       "190920       True  h148_13  \n",
+       "246974       True  h148_13  \n",
+       "132506       True  h148_13  \n",
+       "161854      False  h148_13  \n",
+       "190924       True  h148_13  \n",
+       "...           ...      ...  \n",
+       "39323       False  h329_33  \n",
+       "21846        True  h329_33  \n",
+       "13105       False  h329_33  \n",
+       "34964       False  h329_33  \n",
+       "17484        True  h329_33  \n",
+       "\n",
+       "[244156 rows x 64 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "discharged"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
-   "id": "e5b68d2b",
+   "id": "519b753e",
    "metadata": {},
    "outputs": [
     {
