--- a/StellarFeedback_p3.ipynb
+++ b/StellarFeedback_p3.ipynb
@@ -1109,11 +1109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 98,
    "id": "a9d0515e",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1172,7 +1170,7 @@
     "ax1.ticklabel_format(axis=\"y\", style=\"plain\",scilimits=(0,0))\n",
     "ax1.grid(alpha=0.4, zorder=-1000)\n",
     "\n",
-    "# plt.savefig('plots/reaccretion_dist.pdf')\n",
+    "plt.savefig('plots/reaccretion_dist.pdf')\n",
     "\n",
     "plt.show()"
    ]
@@ -1310,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 99,
    "id": "bc204221",
    "metadata": {},
    "outputs": [
@@ -1379,7 +1377,7 @@
     "ax1.ticklabel_format(axis=\"y\", style=\"plain\",scilimits=(0,0))\n",
     "ax1.grid(alpha=0.4, zorder=-1000)\n",
     "\n",
-    "plt.savefig('plots/reaccretion_dist.pdf')\n",
+    "plt.savefig('plots/reacc_sne.pdf')\n",
     "\n",
     "plt.show()"
    ]
