--- a/Reaccretion_p1.ipynb
+++ b/Reaccretion_p1.ipynb
@@ -5,9 +5,9 @@
    "id": "0d47b6cb",
    "metadata": {},
    "source": [
-    "# Gas Discharge & Stellar Feedback-driven Outflows (Part 3 /3):\n",
-    "## Ram Pressure, Reaccretion Times, Distributions\n",
-    "`-- Leo Lonzarich, 17 November 2021 // [Updated 15-12-21] --`\n",
+    "# Discharge, Reaccretion, and impacts of Supernovae (Part 1 /1):\n",
+    "## Non-reaccreted Gas.\n",
+    "`-- Leo Lonzarich, 27 January 2022 // [Updated 27-1-22] --`\n",
     "\n",
     "\n",
     "### Table of Contents\n",
