--- a/acquisition_test.ipynb
+++ b/acquisition_test.ipynb
@@ -18,9 +18,9 @@
     "---\n",
     "Additional Satellites Collected: \n",
     "- h329:\n",
-    "- h242: 30, 34\n",
+    "- h242: 30, 44, 12\n",
     "- h229:\n",
-    "- h148: 36"
+    "- h148: 36, 14, 3"
    ]
   },
   {
@@ -37,6 +37,56 @@
     "\n",
     "from compiler import *\n",
     "from analysis import * "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c167097c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h148_13 h148_278 h148_28 h148_283 h148_329 h148_36 h148_37 h148_45 h148_68 h148_80 h229_20 h229_22 h229_23 h229_27 h229_55 h242_24 h242_41 h242_44 h242_80 h329_137 h329_33\n"
+     ]
+    }
+   ],
+   "source": [
+    "path1 = f'{rootPath}Stellar_Feedback_Code/SNeData/tracked_particles_v2.hdf5'\n",
+    "with pd.HDFStore(path1) as hdf:\n",
+    "    keys = [k[1:] for k in hdf.keys()]\n",
+    "print(*keys)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c03f053f",
+   "metadata": {},
+   "source": [
+    "KEYS IN TRACKED PARTICLES:\n",
+    "h148_13 \n",
+    "h148_278 \n",
+    "h148_28 \n",
+    "h148_283 \n",
+    "h148_329 \n",
+    "h148_36 \n",
+    "h148_37 \n",
+    "h148_45 \n",
+    "h148_68 \n",
+    "h148_80 \n",
+    "h229_20 \n",
+    "h229_22 \n",
+    "h229_23 \n",
+    "h229_27 \n",
+    "h229_55 \n",
+    "h242_24 \n",
+    "h242_41 \n",
+    "h242_44 \n",
+    "h242_80 \n",
+    "h329_137 \n",
+    "h329_33"
    ]
   },
   {
