--- a/acquisition_test.ipynb
+++ b/acquisition_test.ipynb
@@ -20,7 +20,9 @@
     "- h329:\n",
     "- h242: 30, 44, 12\n",
     "- h229:\n",
-    "- h148: 36, 14, 3"
+    "- h148: 36, 14, 3\n",
+    "\n",
+    "**h242 44 and 30 failed to run into discharged datasets**"
    ]
   },
   {
@@ -42,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c167097c",
+   "id": "44ba31f5",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c03f053f",
+   "id": "11e32fa5",
    "metadata": {},
    "source": [
     "KEYS IN TRACKED PARTICLES:\n",
