--- a/Reaccretion_p1.ipynb
+++ b/Reaccretion_p1.ipynb
@@ -7,13 +7,18 @@
    "source": [
     "# Discharge, Reaccretion, and impacts of Supernovae (Part 1 /?):\n",
     "## Concerning Satellite Infall\n",
-    "`-- Leo Lonzarich, 27 January 2022 // [Updated 10-2-22] --`\n",
+    "`-- Leo Lonzarich, 27 January 2022 // [Updated 17-2-22] --`\n",
     "\n",
     "---\n",
     "\n",
     "### Table of Contents\n",
     "- [Defining Infall](#infall)\n",
+    "    - [Discharge and Reaccretion](#disreacc)\n",
     "    - [Identifying Ram Pressures](#ramdis)\n",
+    "- [SN-heating Gas Fractions](#gasfrac)\n",
+    "    - [Discharged/Reaccreted](#reaccreted)\n",
+    "    - [DIscharged/All](#discharged)\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -72,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "80092e6c",
    "metadata": {},
    "outputs": [
@@ -80,8 +85,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19 Available Keys:\n",
-      " h148_13 h148_278 h148_28 h148_283 h148_329 h148_37 h148_45 h148_68 h148_80 h229_20 h229_22 h229_23 h229_27 h229_55 h242_24 h242_41 h242_80 h329_137 h329_33\n"
+      "23 Available Keys:\n",
+      " h148_13 h148_14 h148_278 h148_28 h148_283 h148_3 h148_329 h148_36 h148_37 h148_45 h148_68 h148_80 h229_20 h229_22 h229_23 h229_27 h229_55 h242_12 h242_24 h242_41 h242_80 h329_137 h329_33\n"
      ]
     }
    ],
@@ -99,7 +104,7 @@
    "id": "56e98626",
    "metadata": {},
    "source": [
-    "## Establishing Infall Distance to Satellite Host  <a class=\"infall\" id=\"ram\"></a>\n",
+    "## Establishing Infall Distance to Satellite Host  <a class=\"anchor\" id=\"infall\"></a>\n",
     "\n",
     "#### Why?\n",
     "\n",
@@ -115,7 +120,11 @@
     "pai = \\frac{\\text{radial distance from sat. to host}}{\\text{virial radius of host}} .\n",
     "$$\n",
     "____\n",
-    "____"
+    "____\n",
+    "\n",
+    "### Effects of POI on Discharge, Reaccretion  <a class=\"anchor\" id=\"disreacc\"></a>\n",
+    "\n",
+    "___"
    ]
   },
   {
@@ -173,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "68568884",
    "metadata": {},
    "outputs": [],
@@ -212,7 +221,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "a9b9dbc0",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -268,7 +279,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "9e6ede24",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -325,7 +338,7 @@
    "execution_count": 47,
    "id": "25d0da58",
    "metadata": {
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -395,16 +408,18 @@
    "id": "3cab9bad",
    "metadata": {},
    "source": [
-    "## SN-heated Gas Fractions\n",
-    "---\n",
+    "## SN-heated Gas Fractions <a class=\"anchor\" id=\"gasfrac\"></a>\n",
     "\n",
     "We give two treatments in this section:\n",
-    "1. Fraction of SN-heated, discharged gas that are reaccreted at each $PAI/R_{vir}$;\n",
+    "1. Fraction of SN-heated, discharged gas reaccreted at each $PAI/R_{vir}$;\n",
     "\n",
-    "2. Fraction of all SN-heated gas that is discharged from its satellite (again, at each $PAI/R_{vir}$)\n",
+    "2. Fraction of all SN-heated gas discharged from its satellite (again, at each $PAI/R_{vir}$)\n",
+    "___\n",
+    "___\n",
     "\n",
     "\n",
-    "### SN-heated, Reaccreted Gas / SN-heated, Discharged Gas"
+    "### SN-heated, Reaccreted Gas / SN-heated, Discharged Gas <a class=\"anchor\" id=\"reaccreted\"></a>\n",
+    "___"
    ]
   },
   {
@@ -478,12 +493,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab417ef6",
+   "cell_type": "markdown",
+   "id": "3a4c8faf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### SN-heated, Discharged Gas / SN-heated Gass <a class=\"anchor\" id=\"discharged\"></a>\n",
+    "___"
+   ]
   },
   {
    "cell_type": "code",
@@ -497,6 +513,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fc189754",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6d3a32a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcb45a4d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3795fae",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1074,7 +1114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
