--- a/pickleAccess_test.ipynb
+++ b/pickleAccess_test.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f2f4c196",
+   "id": "ad47f29c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,11 +28,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ff5b4a68",
+   "id": "0c60243e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_SNGas(sim, haloid, save=True, verbose=True):\n",
+    "def calc_snGas(sim, haloid, save=True, verbose=True):\n",
     "    '''\n",
     "    -> Identifies all gas particles that were subject to supernova heating in the\n",
     "        simulations.\n",
@@ -47,7 +47,7 @@
     "    gas = pd.DataFrame() # all gas in sims that experienced SN-heating.\n",
     "    \n",
     "    pids = np.unique(data.pid)\n",
-    "    for pid in tqdm.tqdm(pids):\n",
+    "    for  :\n",
     "        dat = data[data.pid==pid]\n",
     "\n",
     "        time = np.array(dat.time, dtype=float)\n",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3f996b00",
+   "id": "262db8cc",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64675a64",
+   "id": "524e86b2",
    "metadata": {},
    "outputs": [],
    "source": []
